<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/challenge_class"
        android:text="@string/game"
        android:shape="rectangle"
        android:radius="4dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_weight="1"
        android:background="@color/colorStage1"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="?android:textColorTertiary"
        android:paddingLeft="8dp"
        android:paddingTop="8dp"
        android:paddingRight="8dp"
        android:paddingBottom="8dp"/>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/challenge_type"
        android:text="@string/trivia"
        android:shape="rectangle"
        android:radius="4dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_weight="1"
        android:background="@color/colorMultipleChoice"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="?android:textColorTertiary"
        android:paddingLeft="8dp"
        android:paddingTop="8dp"
        android:paddingRight="8dp"
        android:paddingBottom="8dp"/>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/challenge_category"
        android:text="@string/multi"
        android:shape="rectangle"
        android:radius="4dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_weight="1"
        android:background="@color/colorSelfCheck"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="?android:textColorTertiary"
        android:paddingLeft="8dp"
        android:paddingTop="8dp"
        android:paddingRight="8dp"
        android:paddingBottom="8dp"/>
</android.support.v7.widget.LinearLayoutCompat>
