<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.main.PlayerTwoActivity">

    <include layout="@layout/top_labels"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/instruction"
            android:text="@string/instructionSuddenPhase"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/multiplechoice_button"
            android:gravity="center_horizontal"
            android:layout_marginBottom="-25dp"
            android:layout_marginTop="25dp"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/questionText"
            android:text="@string/questionText"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/multiplechoice_button"
            android:gravity="center_horizontal"
            android:visibility="invisible"
            android:layout_marginBottom="15dp"/>
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_width="0dip"
            android:id="@+id/buttonOne"
            android:background="@drawable/multiple_choice_toggle"
            android:textColor="@color/multiplechoice_button"
            android:visibility="invisible"/>
        <Button
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_width="0dip"
            android:id="@+id/buttonTwo"
            android:background="@drawable/multiple_choice_toggle"
            android:textColor="@color/multiplechoice_button"
            android:visibility="invisible"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_width="0dip"
            android:id="@+id/buttonThree"
            android:background="@drawable/multiple_choice_toggle"
            android:textColor="@color/multiplechoice_button"
            android:visibility="invisible"/>
        <Button
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_width="0dip"
            android:id="@+id/buttonFour"
            android:background="@drawable/multiple_choice_toggle"
            android:textColor="@color/multiplechoice_button"
            android:visibility="invisible"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:text="@string/titleText"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:paddingBottom="10dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/playerTurnTextView"
        android:text="@string/PlayerTurnText"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/multiplechoice_button"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:visibility="invisible"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:width="200dp"
        android:text="@string/startButton"
        android:id="@+id/startButton"
        android:layout_gravity="center"
        android:background="@drawable/multiple_choice_toggle"
        android:textColor="@color/multiplechoice_button"
        />

</LinearLayout>